<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Home">

    <LinearLayout
        android:id="@+id/linearLayoutmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <ImageView
            android:id="@+id/buttonback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:layout_gravity="start"
            android:padding="8dp" />

        <TextView
            android:id="@+id/titlePage2"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/titlePage2"
            android:textColor="@color/grayblack"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:padding="8dp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/almostWhite"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutmenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/welcome"
        android:fontFamily="@font/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textSize="12sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutmenu"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutmenu" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/selectedUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_chooseUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/chooseUser"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>